--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "some-package",
   "version": "1.0.0",
   "description": "this is an example of a package that contains a simple web server taking one argument for port and any files inside public directory",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node server.js --port=5555",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/comp426-2022-fall/a01-wlan418.git"
   },
   "keywords": [
-    "web"
+    "web",
+    "server",
+    "port",
+    "node",
+    "fs",
+    "args",
+    "http"
   ],
   "author": "wlan418",
   "license": "GPL-3.0-or-later",
